tests/fixtures/invalid/oct_float.py
# Cannot call oct() with Float
x = oct(1.0)
